--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -2,4 +2,7 @@
 <form>
   <label>Post title:</label><br>
   <input type="text" id="post_title" name="post[title]"><br>
+
+  <label>Post description:</label><br>
+  <input type="text" id="post_title" name="post[title]"><br>
 </form>
