--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -4,5 +4,5 @@
   <input type="text" id="post_title" name="post[title]"><br>
 
   <label>Post description:</label><br>
-  <input type="text" id="post_description" name="post[description]"><br>
+  <textarea id="post_description" name="post[description]"><br>
 </form>
