--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -1,4 +1,5 @@
 <%= form_tag posts_path do %>
+<%= hidden_field_tag :authenticity_token, form_authenticity_token %>
   <label>Post title:</label><br>
   <input type="text" id="post_title" name="post[title]"><br>
 
